--- a/jokestan/src/assets/style/mainpage.css
+++ b/jokestan/src/assets/style/mainpage.css
@@ -1,6 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Courier+Prime:ital@0;1&family=Holtwood+One+SC&family=Josefin+Sans&family=Paytone+One&family=Russo+One&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Alegreya+Sans:wght@500&display=swap");
-
 * {
   margin: 0;
   padding: 0;
@@ -12,7 +11,6 @@ section#main {
   background-size: cover;
   height: 100vh;
 }
-
 section#main div#introduction {
   width: 100%;
   margin-top: 142.8571428571px;
@@ -41,6 +39,4 @@ div.MuiStack-root > button {
   position: absolute;
   bottom: 40px;
   right: 50px;
-}
-
-/*# sourceMappingURL=mainpage.css.map */
+}/*# sourceMappingURL=mainpage.css.map */
