--- a/jokestan/src/assets/style/start.css
+++ b/jokestan/src/assets/style/start.css
@@ -1,3 +1,10 @@
-#startPage {
-  display: flex;
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Kanit:wght@600&display=swap");
+#VhHeight {
+  height: 100vh !important;
+}
+
+#mAuto {
+  margin: 0 auto;
 }/*# sourceMappingURL=start.css.map */
